# fast-graph

./: .gitignore  LICENSE  README.md  app_demo.py  pyproject.toml  pytest.ini  server.py
graph_demo/: graph.py  state.py
scripts/: README.md  build.bat  build.sh  build_and_install.bat  build_and_install.sh  clean.bat  clean.sh
sql/: README.md  init.sql
src/fast_graph/: __init__.py  app.py  config.py  errors.py  global_config.py
src/fast_graph/a2a/: __init__.py  agent_executor.py  integration.py
src/fast_graph/api/: __init__.py  assistant_routes.py  router.py  run_routes.py  stateless_run_routes.py  thread_routes.py
src/fast_graph/graph/: executor.py  registry.py  stateless_executor.py
src/fast_graph/manager/: __init__.py  base_threads_manager.py  pg_threads_manager.py
src/fast_graph/managers/: __init__.py  base_checkpointer_manager.py  base_queue_manager.py  base_threads_manager.py  memory_checkpointer_manager.py  memory_queue_manager.py  memory_threads_manager.py  pg_checkpointer_manager.py  pg_connection.py  pg_threads_manager.py  redis_queue_manager.py
src/fast_graph/model/: __init__.py  assistant_models.py
src/fast_graph/models/: __init__.py  run_models.py  stateless_run_models.py  thread_models.py
src/fast_graph/service/: __init__.py  assistants_service.py  threads_service.py
src/fast_graph/services/: __init__.py  assistants_service.py  runs_service.py  threads_service.py  (+1 more)
tests/: test_graph_executor.py  test_redis_queue_manager.py  test_remote_graph.py  test_runs_service.py  test_stateless_graph_executor.py  test_stateless_runs_service.py
