[project]
name = "fast-graph"
version = "0.1.0"
description = "fast langgraph server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "langchain>=1.2.7",
    "langgraph>=1.0.7",
    "uvicorn>=0.40.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "greenlet>=3.3.1",
]
